updating body with profile

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an up and coming sofware developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Ecuador->NJ->NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>DiskGolf, Reading, Clash of Clans</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Super Model</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Details Mooresville NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>MONEY, It's to blame</p>
     </section>
 
     <footer id="footer">
