updating h1 tag with name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm an up and coming sofware developer</p>
+      <p>I'm an up and coming sofware developer, currently a manicurist extraordinaire</p>
       <h1>Where I'm From</h1>
       <p>Ecuador->NJ->NC</p>
       <h1>What are your favorite hobbies?</h1>
